--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -63,6 +63,7 @@
                         <li><a href="/tienda/caja">Caja Chica</a></li>
                         <li><a href="/tienda/compras">Compras por Día</a></li>
                         <li><a href="/tienda/ventas">Ventas por Día</a></li>
+                        <li><a href="/tienda/ventas/fechas">Ventas por rango de fechas</a></li>
                         <li><a href="/tienda/ventas/canceladas">Ventas canceladas por Día</a></li>
                         <li><a href="/tienda/estado_cuenta">Estado de cuenta</a></li>
 
@@ -76,6 +77,7 @@
                         <li><a href="/reportes/balance">Balance Mensual</a></li>
                         <li><a href="/reportes/compra">Libro Compra</a></li>
                         <li><a href="/reportes/venta">Libro Venta</a></li>
+                        <li><a href="/reportes/pagos/fechas">Pagos Tarjeta</a></li>
                     </ul>
                 </li>
                 <li><a><img src="/static/img/ajustes_blanco.png" width="25px" style="margin: 0.3em 0.6em 0.6em 0.6em">
