- Saca accion de facturas canceladas

--- a/src/tienda/templates/ventas-canceladas.html
+++ b/src/tienda/templates/ventas-canceladas.html
@@ -56,7 +56,7 @@
                                 <th>Total IVA</th>
                                 <th>Monto Total</th>
                                 <th>Estado</th>
-                                <th>Acción</th>
+{#                                <th>Acción</th>#}
                             </tr>
 
                             </thead>
@@ -77,9 +77,9 @@
                                     <td>{{ venta.estado }}</td>
                                     <td>
 
-                                        <a button class="btn btn-primary btn-xs" href="/tienda/ventas/{{ venta.nro_factura }}">Detalle</a>
-                                        <a button class="btn btn-danger btn-xs" data-toggle="modal"
-                                           data-target="#eliminar-modal" onclick="formEliminar({{ venta.id }})">Cancelar</a>
+{#                                        <a button class="btn btn-primary btn-xs" href="/tienda/ventas/{{ venta.nro_factura }}">Detalle</a>#}
+{#                                        <a button class="btn btn-danger btn-xs" data-toggle="modal"#}
+{#                                           data-target="#eliminar-modal" onclick="formEliminar({{ venta.id }})">Cancelar</a>#}
 
                                     </td>
 
