--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -60,10 +60,10 @@
                     Finanzas
                     <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="/tienda/caja">Caja Chica</a></li>
-                        <li><a href="/tienda/compras">Compras por Día</a></li>
-                        <li><a href="/tienda/ventas">Ventas por Día</a></li>
-                        <li><a href="/tienda/ventas/canceladas">Ventas canceladas por Día</a></li>
+                        <li><a href="/tienda/caja">Caja Chica Diaria</a></li>
+                        <li><a href="/tienda/compras">Compras Diaria</a></li>
+                        <li><a href="/tienda/ventas">Ventas Diarias</a></li>
+                        <li><a href="/tienda/ventas/canceladas">Ventas canceladas Diarias</a></li>
                         <li><a href="/tienda/ventas/fechas">Ventas por rango de fechas</a></li>
                         <li><a href="/tienda/estado_cuenta">Estado de cuenta</a></li>
 
