--- a/src/tienda/templates/ventas-canceladas.html
+++ b/src/tienda/templates/ventas-canceladas.html
@@ -24,7 +24,7 @@
         <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="x_panel">
                 <div class="x_content">
-                  <form method="GET" action="/tienda/ventas"  class="form form-inline hidden-print">
+                  <form method="GET" action="/tienda/ventas/canceladas"  class="form form-inline hidden-print">
 
                             <label for="fecha">Fecha</label>
                             <input class="form-control" type="text" value="{{ fecha }}" name="fecha" data-inputmask="'mask': '99/99/9999'" &nbsp>
@@ -56,8 +56,9 @@
                                 <th>Total IVA</th>
                                 <th>Monto Total</th>
                                 <th>Estado</th>
+                                </tr>
 {#                                <th>Acción</th>#}
-                            </tr>
+
 
                             </thead>
                             <tbody>
@@ -75,7 +76,7 @@
                                     <td>{{ venta.total_iva| intdot }} ₲</td>
                                     <td>{{ venta.monto_total| intdot }} ₲</td>
                                     <td>{{ venta.estado }}</td>
-                                    <td>
+                                    </tr>
 
 {#                                        <a button class="btn btn-primary btn-xs" href="/tienda/ventas/{{ venta.nro_factura }}">Detalle</a>#}
 {#                                        <a button class="btn btn-danger btn-xs" data-toggle="modal"#}
@@ -86,7 +87,7 @@
 {#                                    <td><a class="btn btn-info btn-xs" href="/tienda/compras/{{ venta.id }}/update">Editar </a>#}
 {#                                        <a button class="btn btn-danger btn-xs" data-toggle="modal"#}
 {#                                           data-target="#eliminar-modal" onclick="formEliminar({{ venta.id }})">Eliminar</a></td>#}
-                                </tr>
+
                             {% endfor %}
 
                             </tbody>
