--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -23,6 +23,10 @@
                         {% if perms.escuela.inscripcion_baja %}
                             <li><a href="/escuela/inscripciones/bajas">Baja de inscripción</a></li>
                         {% endif %}
+
+
+
+
                     </ul>
                 </li>
                 <li><a><img src="/static/img/cursos_blanco.png" width="27px" style="margin: 0.3em 0.6em 0.6em 0.6em">
@@ -77,7 +81,7 @@
                         <li><a href="/reportes/balance">Balance Mensual</a></li>
                         <li><a href="/reportes/compra">Libro Compra</a></li>
                         <li><a href="/reportes/venta">Libro Venta</a></li>
-                        <li><a href="/reportes/pagos/fechas">Pagos Tarjeta</a></li>
+                        <li><a href="/reportes/pagos/tarjetas">Cobros con Tarjeta</a></li>
                     </ul>
                 </li>
                 <li><a><img src="/static/img/ajustes_blanco.png" width="25px" style="margin: 0.3em 0.6em 0.6em 0.6em">
