--- a/src/tienda/templates/producto.html
+++ b/src/tienda/templates/producto.html
@@ -9,7 +9,7 @@
         <div class="title_right">
             <form>
             <div class="col-md-5 col-sm-5 col-xs-12 pull-right top_search">
-                     <a class="btn btn-success pull-right" href="/tienda/export/csv"><i  class="fa fa-download"></i> CSV</a>
+                     <a class="btn btn-success pull-right" href="/tienda/productos/csv"><i  class="fa fa-download"></i> CSV</a>
                  &nbsp;
 
                     <a class="btn btn-primary pull-right" href="/tienda/productos/new"><i  class="fa fa-plus-square"></i> NUEVO PRODUCTO </a>
