--- a/src/tienda/templates/clientes.html
+++ b/src/tienda/templates/clientes.html
@@ -7,6 +7,7 @@
         </div>
         <div class="title_right">
             <div class="col-md-5 col-sm-5 col-xs-12 pull-right top_search">
+                 <a class="btn btn-success pull-right" href="/tienda/clientes/csv"><i  class="fa fa-download"></i> CSV</a>
 
                     <a class="btn btn-primary pull-right" href="/tienda/clientes/new"><i  class="fa fa-plus-square"></i> NUEVO CLIENTE</a>
 
